--- a/templates/card.html
+++ b/templates/card.html
@@ -1,8 +1,8 @@
 <div class="card %s">
-	<div class="title">%s</div>
-	<div class="description">%s</div>
+	<h1 class="title">%s</h1>
+	<p class="description">%s</p>
 	<div class="squares">
 		%s
 	</div>
-	<div class="rules">%s</div>
+	<p class="rules">%s</p>
 </div>
